2007-02-12  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (EXTRA_DIST): Removed fastjar.texi.
	* Makefile.in: Regenerated.

2007-02-12  Alfred M. Szmidt  <ams@gnu.org>

	* jartool.c (MAXPATHLEN) [!MAXPATHLEN]: Removed macro.
	(get_next_arg): Allocate memory dynamiclly for S.
	(add_to_jar_with_dir): Allocate memory dynamiclly for OLD_DIR.

2007-02-12  Matthias Klose  <doko@ubuntu.com>

	* fastjar.texi: Set version to 0.95; remove references to the FDL.
	* Makefile.am: Remove references to fdl.texi.
	* Makefile.in: Regenerate.

2007-02-12  Matthias Klose  <doko@ubuntu.com>

	* fdl.texi, COPYING.DOC: Remove, all documentation is licensed
	under the GPL.
	* fastjar.texi: Don't include fdl.texi.
	* AUTHORS: Add myself as documentation author.

2007-02-09  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2007-02-09  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (pscan, flawfinder, rats, splint): Added new targets
	which invoke source code scanners.

	* configure.ac (AC_CHECK_PATH): Check for pscan, flawfinder, rats and
	splint.

	* Makefile.in, lib/Makefile.in, configure: Regenerated.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_MSG_ERROR): Stop configure if neither ftruncate 
	or _chsize exists.

	* configure: Regenerated.

	* jartool.c (main): Simplified ftruncate and _chsize handling by moving 
	the check into the configure script.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* pushback.h: Include jartool.h to declare the types used in struct
	definition.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* compress.h: Include zlib.h, jartool.h and pushback.h to declare the
	types used in parameters.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_file_to_jar, add_array_to_jar): Made file_name_length
	into a size_t.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (make_manifest): Turned mf_len into a size_t.

2007-02-08  Dalibor Topic  <robilad@kaffe.org>
